[gd_scene load_steps=15 format=3 uid="uid://bqieted5khywp"]

[ext_resource type="Texture2D" uid="uid://85iiebstf4s5" path="res://assets/player/player.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://b150v21o6m4x4" path="res://player/player.gd" id="1_rkbax"]
[ext_resource type="PackedScene" uid="uid://nt7uwlqph4at" path="res://gun/playerGun/player_gun.tscn" id="3_g1dw6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oul6g"]

[sub_resource type="Animation" id="Animation_rkbax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qjkh3"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_g6k8r"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_oul6g"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_yw30f"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_g1dw6"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1dw6"]
_data = {
&"RESET": SubResource("Animation_rkbax"),
&"fall": SubResource("Animation_qjkh3"),
&"hurt": SubResource("Animation_g6k8r"),
&"idle": SubResource("Animation_oul6g"),
&"jump": SubResource("Animation_yw30f"),
&"run": SubResource("Animation_g1dw6")
}

[sub_resource type="Animation" id="Animation_rgyib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_boad6"]
resource_name = "invincible"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.30301794),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.14509805), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hg6s5"]
_data = {
&"RESET": SubResource("Animation_rgyib"),
&"invincible": SubResource("Animation_boad6")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_rkbax")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = ExtResource("1_oul6g")
hframes = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.9604645e-08, 4.7683716e-07)
scale = Vector2(0.71999943, 0.7199997)
shape = SubResource("CapsuleShape2D_oul6g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g1dw6")
}
autoplay = "idle"

[node name="DebugLabel" type="Label" parent="."]
offset_left = -3.0
offset_top = -94.0
offset_right = 117.0
offset_bottom = -44.0
theme_override_constants/line_spacing = 0
theme_override_constants/paragraph_spacing = 1
theme_override_font_sizes/font_size = 8

[node name="SoundPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="RayCastWallLeft" type="RayCast2D" parent="."]
target_position = Vector2(10, 0)

[node name="RayCastWallRight" type="RayCast2D" parent="."]
target_position = Vector2(-10, 0)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-5.9604645e-08, 4.7683716e-07)
scale = Vector2(0.71999943, 0.7199997)
shape = SubResource("CapsuleShape2D_oul6g")

[node name="PlayerGun" parent="." instance=ExtResource("3_g1dw6")]
SPEED = 300

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="InvicibleAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hg6s5")
}

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
